tools/sddl/assembler/tests/success/type_fixed_array_large_count.asm
; Test: Large array count
push.type.u8
type.fixed_array 1000000
halt
