tools/sddl/assembler/tests/fail/type_fixed_array_missing_param.asm
; Error: type.fixed_array missing array count parameter
push.type.u32le
type.fixed_array
halt
